--- a/article.html
+++ b/article.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
     Правила организации отступов как сделать вёрстку гибкой и не допустить ошибок
   </title>
